fixed line height for long breadcrumbs on mobile

--- a/wordpress/wp-content/themes/freeminds/sass/base/_page.scss
+++ b/wordpress/wp-content/themes/freeminds/sass/base/_page.scss
@@ -5,6 +5,7 @@
 .breadcrumb {
   margin-bottom: 1em;
   padding: 1em 1em 1em 0;
+  line-height: 1.5em;
   background-color: transparent;
 }
 // Page quotes
